--- a/index.html
+++ b/index.html
@@ -10,7 +10,65 @@
     <script src="https://unpkg.com/@tailwindcss/browser@latest"></script>
   <title>Budget Tracker</title>
 </head>
-<body>
-  
+<body class="bg-gray-100 min-h-screen flex items-center justify-center py-10">
+  <div class="container bg-white shadow-lg rounded-lg md:w-4/5 max-w-2xl p-6">
+        <header class="text-center mb-6">
+            <h1 class="text-3xl font-semibold text-indigo-600">My Budget Tracker</h1>
+        </header>
+
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold text-gray-700 mb-4">Add New Transaction</h2>
+            <form id="transaction-form" class="grid grid-cols-1 gap-4">
+                <div>
+                    <label for="type" class="block text-gray-700 text-sm font-bold mb-2">Type:</label>
+                    <select id="type" class="shadow appearance-none border rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                        <option value="income">Income</option>
+                        <option value="expense">Expense</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Description:</label>
+                    <input type="text" id="description" placeholder="e.g., Salary, Groceries" required class="shadow appearance-none border rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                </div>
+                <div>
+                    <label for="amount" class="block text-gray-700 text-sm font-bold mb-2">Amount:</label>
+                    <input type="number" id="amount" placeholder="e.g., 100.00" required min="0.01" step="0.01" class="shadow appearance-none border rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                </div>
+                <button type="submit" class="bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Add Transaction</button>
+            </form>
+        </section>
+
+        <section class="mb-8">
+            <h2 class="text-xl font-semibold text-gray-700 mb-4">Summary</h2>
+            <div class="bg-gray-50 rounded-md p-4 grid grid-cols-1 md:grid-cols-3 gap-4">
+                <div class="text-center">
+                    <h3 class="text-md font-semibold text-gray-600">Total Income:</h3>
+                    <p id="total-income" class="text-green-500 font-bold text-lg">$0.00</p>
+                </div>
+                <div class="text-center">
+                    <h3 class="text-md font-semibold text-gray-600">Total Expenses:</h3>
+                    <p id="total-expenses" class="text-red-500 font-bold text-lg">$0.00</p>
+                </div>
+                <div class="text-center">
+                    <h3 class="text-md font-semibold text-gray-600">Balance:</h3>
+                    <p id="balance" class="text-blue-500 font-bold text-lg">$0.00</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h2 class="text-xl font-semibold text-gray-700 mb-4">Transactions</h2>
+             <div class="mb-4">
+                <label for="filter-type" class="block text-gray-700 text-sm font-bold mb-2">Filter by:</label>
+                    <select id="filter-type" class="shadow appearance-none border rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                        <option value="all">All</option>
+                        <option value="income">Income</option>
+                        <option value="expense">Expenses</option>
+                    </select>
+            </div>
+            <ul id="transaction-list" class="space-y-3">
+                </ul>
+        </section>
+    </div>
 </body>
 </html>
